[gd_scene load_steps=2 format=2]

[ext_resource path="res://Src/Levels/Level0.gd" type="Script" id=1]

[node name="Level0" type="Node2D"]
script = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0
text = "Hello Level"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonBack" type="Button" parent="."]
margin_left = 336.0
margin_top = 8.0
margin_right = 400.0
margin_bottom = 28.0
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonMusic" type="Button" parent="."]
margin_left = 512.0
margin_top = 8.0
margin_right = 608.0
margin_bottom = 28.0
text = "ToggleMusic"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSound" type="Button" parent="."]
margin_left = 408.0
margin_top = 8.0
margin_right = 504.0
margin_bottom = 28.0
text = "ToggleSound"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 203.0
margin_top = 134.0
margin_right = 337.0
margin_bottom = 200.0
text = "Click me"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="button_up" from="ButtonBack" to="." method="_on_ButtonBack_button_up"]
[connection signal="button_up" from="ButtonMusic" to="." method="_on_ButtonMusic_button_up"]
[connection signal="button_up" from="ButtonSound" to="." method="_on_ButtonSound_button_up"]
[connection signal="button_up" from="Button" to="." method="_on_ButtonTest_button_up"]
